--- a/src/common/templates/WeatherForecast/WeatherForecast.module.css
+++ b/src/common/templates/WeatherForecast/WeatherForecast.module.css
@@ -1,4 +1,5 @@
 .container {
     gap: 2em;
     flex-wrap: wrap;
+    width: fit-content;
 }
